# cplusplus-devcontainer

./: .gitignore  CMakeLists.txt  README.md  meson.build  mypassthrough.cpp
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
src/: hello.cpp  hello.h  main.cpp
src/concepts/enum/: enum.hpp
src/concepts/shared_pointer/: shared_example.hpp
src/glib/gsource/: Makefile  README.md  custom_source_fd.c  send_to_pipe.sh
src/gstreamer/: gst_pipeline.cpp  gst_pipeline.hpp
src/gstreamer/gstBusHandOn/: Makefile  README.md  gsourceNotification.c
src/http/: server.cpp  server.h
tests/: test_concept_enum.cpp  test_concepts.cpp  test_gst_pipeline.cpp  test_hello.cpp  test_http_server.cpp
tests/utils/: pipeline_descriptions.cpp  pipeline_descriptions.hpp
